# Jip

./: .gitignore  Cargo.toml  TODO.txt  build.rs  formula  readme.md
Jip/: Cargo.toml  readme.md
benchmarks/: 1-Expression-Evaluation.html  2-Pruning.html  coastal.xml  gdart.xml  java-ranger.xml  jayhorn.xml  jbmc.xml  jdart.xml  jip.py  mlb.xml  readme.md  spf.xml
results/: jip-a.2023-05-25_10-59-32.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-api.2023-05-26_12-45-50.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-api.2023-05-26_12-45-50.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-c.2023-05-25_09-54-01.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-cvc4.2023-05-26_17-18-08.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-cvc4.2023-05-26_17-18-08.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-cvc4.2023-06-05_14-33-51.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-cvc4.2023-06-05_14-33-51.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-e.2023-05-24_21-18-56.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-e.2023-05-25_09-21-59.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-e.2023-06-02_16-03-37.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-e.2023-06-05_18-02-33.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-e.2023-06-05_18-02-33.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-e.2023-06-05_19-35-04.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-e.2023-06-05_19-35-04.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-e.2023-06-05_19-37-45.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-ef-c.2023-05-30_14-48-14.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-ef-c.2023-05-30_14-48-14.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-ef-c.2023-05-30_14-48-49.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-ef-c.2023-05-30_14-48-49.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-ef.2023-05-30_15-02-27.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-ef.2023-05-30_15-02-27.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-f-c.2023-05-25_12-32-04.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-f-c.2023-05-25_12-32-04.results.SV-COMP23_assert_oox.ReachSafety-Java.xml  jip-f-c.2023-05-30_16-09-21.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-f.2023-05-25_11-30-14.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-f.2023-05-25_11-30-14.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-f.2023-05-25_12-30-50.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-f.2023-05-25_12-30-50.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  jip-f.2023-05-25_12-50-45.results.SV-COMP23_assert_oox.ReachSafety-Java.txt  jip-f.2023-05-25_12-50-45.results.SV-COMP23_assert_oox.ReachSafety-Java.xml.bz2  (+54 more)
(+495 files in other folders)
