[package]
name = "jip"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing
resolver = "1" #solves issue with lexer (https://github.com/lalrpop/lalrpop/issues/616)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = "0.19.7"
regex = "1"
z3 = {version="0.11.2", features = ["static-link-z3"]}
clap = { version = "3.1.18", features = ["derive"] }
assert_cmd = "2.0.4"
predicates = "2.1.1"