[package]
name = "jip"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing
resolver = "1" #solves issue with lexer (https://github.com/lalrpop/lalrpop/issues/616)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = "0.19.7"
regex = "1"
petgraph = "0.5.1"
z3 = {version="0.11.2", features = ["static-link-z3"]}
clap = { version = "3.1.18", features = ["derive"] }
assert_cmd = "2.0.4" #integration testing through cmd line
non-empty-vec = "0.2.3" #to represent non-empty structures in syntax 
rustc-hash = "1.1.0" #more efficient hashmap/hashset

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Generates random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
debug=true # only turn on for profiling
lto = true
codegen-units = 1 # this is a heuristic
panic = "abort" # not tested since performance increase is small